fix: corrige revisao de codigo da PR #5
- Remove assercao duplicada em reservaDeveSerDaMesmaPosicao (coberta por tecnicoNaoDeveTerReserva)
- Corrige formatacao de odd com Locale.ROOT para evitar falha em ambiente pt-BR
- Reorganiza atividades.md agrupando itens pendentes separados dos concluidos

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>